# QuacksTwit

./: .gitignore  CMakeLists.txt  README.md  gen.py
cli/: Info.plist  main.cpp
def/: stream.json
def/rest/: statuses.json
def/type/: entity.json  twit.json  url.json  user.json
ext/McbDES/: CMakeLists.txt  McbDES2.c
ext/McbDES/include/: McbDES2.hpp
ext/oauthlib/: CMakeLists.txt
ext/oauthlib/include/: oauthlib.h
ext/oauthlib/src/: HMAC_SHA1.h  base64.cpp  constant.h  oauthlib.cpp  urlencode.cpp
include/: account.h  accountStore.h  api.h  color.h  config.h.in  out.h  rest.h
src/: account.cpp  accountStore.cpp  color_internal.h  parseUtil.h  request.cpp  request.h  request.mm  rest.cpp
src/android/: accountStore.cpp  jni.cpp  jni_helper.h
src/apple/: account.mm  accountStore.mm  accountStore_apple.mm  account_apple.h  account_apple.mm  request.mm
src/curl/: account.cpp  accountStore.cpp  accountStore_curl.cpp  account_curl.h  curl_helper.cpp  curl_helper.h  request.cpp  request_curl.cpp
